@@ -818,6 +818,9 @@ Release 0.23.3 - UNRELEASED
     HADOOP-8726. The Secrets in Credentials are not available to MR tasks
     (daryn and Benoy Antony via bobby)
 
+    HADOOP-8727. Gracefully deprecate dfs.umaskmode in 2.x onwards (Harsh J
+    via bobby)
+
 Release 0.23.2 - UNRELEASED 
 
   NEW FEATURES
